# Renderer

./: .gitignore  CMakeLists.json  CMakeLists.txt  README.md  main.cpp
CMake/: Common.cmake
Math/: Matrix.h  Vector.h
Tests/: CMakeLists.txt
source/: BuildType.h  CMakeLists.txt  Platform.h
source/Foundation/: RAssert.h
source/Runtime/Math/: CMakeLists.txt
source/Runtime/Memory/: Allocator.cpp  Allocator.h  MemoryAllcator.h  MemoryManager.cpp  MemoryManager.h
